<resources>
    <string name="app_name">Preface</string>
    <string name="app_version">1.0.2</string>
    <string name="school_name">WT High School</string>
    <string name="preference_file_key">FBLAApplicationUserData</string>
    <string name="string_empty"></string>
    <string name="facebook_app_id">335945573476200</string>
    <string name="fb_login_protocol_scheme">fb335945573476200</string>
    <string name="crash_toast_text">Please press send in the email to send a crash report.</string>

    <!-- Login Activity -->
    <string name="login_message">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>

    <!-- CreateAccount Activity -->
    <string name="name">Full Name</string>
    <string name="school_id">School ID</string>

    <!-- Transition Names -->
    <string name="trans_create_account">trans_create_account</string>
    <string name="trans_top_panel">trans_top_panel</string>
    <string name="trans_bottom_panel">trans_bottom_panel</string>
    <string name="trans_tv_email">trans_tv_email</string>
    <string name="trans_et_email">trans_et_email</string>
    <string name="trans_tv_password">trans_tv_password</string>
    <string name="trans_et_password">trans_et_password</string>
    <string name="trans_bottom_fab">trans_bottom_fab</string>
    <string name="trans_iv_book_cover">trans_iv_book_cover</string>
    <string name="trans_tv_avg_rating">trans_tv_avg_rating</string>

    <!-- Main -->
    <string name="more">More</string>

    <!-- Book Details Activity -->
    <string name="checkout">Check out</string>
    <string name="minimize">Minimize</string>
    <string name="read_more">Read More</string>
    <string name="leave_review">Leave a Review</string>
    <string name="submit">submit</string>
    <string name="currently_available">Books Available:</string>
    <string name="total">Total</string>
    <string name="get">Get</string>
    <string name="wait_list">Wait List</string>
    <string name="view_all">View All</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Account Details Activity -->
    <string name="favorites">Favorites</string>

    <!-- Strings related to Settings -->
    <string name="general">General</string>
    <string name="notify_overdue">Notify if books are overdue</string>
    <string name="notify_fee">Notify if charged a fee</string>
    <string name="clear_liked_books">Clear liked books</string>

    <string name="about">About</string>
    <string name="version">1.0.2</string>
    <string name="release_date">January 15, 2018</string> <!-- TODO set info -->

    <!-- About Activity Strings -->
    <string name="about_school">Since its founding, WT High School has been committed to advancing the education of its community by providing limitless free
    resources to its student body and teachers. We are proud that our library contains a vast wealth of utilities for all to benefit from. With our app, Preface, we
    are achieving our mission of providing educational resources to those eager to learn. See a map of our prestigious school and library above.</string>

    <string name="about_app">With this app, "Preface", students and faculty alike can find, preview, checkout, and return books.
        If the desired book is currently checked out, then the user can add themselves to the waitinglist with the touch of a button. After a user checks
        out a book on the app, it will be ready for pick up, and as the due date approches, they will receive notifications, reminding them that a book is due soon.\n\n This app was
        created by Matthew Walowski for the 2018 FBLA Mobile Application Development Competition. WT Highschool and any books checked out on this app are factitious. All book covers
        are rightfully retrieved from Google Books service. </string>

    <string name="follow_us">Follow us on social media!</string>

</resources>
