<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General Settings -->
    <PreferenceCategory
        android:title="@string/general" >

        <SwitchPreference
            android:key="pref_key_notify_overdue"
            android:title="@string/notify_overdue"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="pref_key_notify_fee"
            android:title="@string/notify_fee"
            android:defaultValue="true" />

        <Preference
            android:key="pref_key_clear_liked"
            android:title="@string/clear_liked_books" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="For Judges and Development">

        <Preference
            android:key="pref_key_crash_app"
            android:title="Crash App to Send Report"
            android:summary="This will simulate a crash should it ever occur. This is used for judging purposes to demonstrate the bug reporting process."/>

        <Preference
            android:key="pref_key_notification_seq"
            android:title="Force Notification"
            android:summary="This will force send a notification that a user may recieve if that had a book due soon.
This is used for judging purposes to demonstrate that notifications are implemented. After pressing this
button you will have 5 seconds to exit the app to view the notification."/>

    </PreferenceCategory>

    <!-- About App -->
    <PreferenceCategory
        android:title="@string/about" >

        <Preference
            android:title="@string/version" />

        <Preference
            android:title="@string/release_date" />

    </PreferenceCategory>


</PreferenceScreen>
