<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary100">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/aba_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary600"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp">

            <include layout="@layout/actionbar_title" />

        </android.support.v7.widget.Toolbar>



        <!-- Main Content -->
        <LinearLayout
            android:id="@+id/aba_main_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary300">


            <!-- First Layer - Adds elevated effect -->
            <LinearLayout
                android:id="@+id/aba_second_layer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary500"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height_default"
                    android:layout_gravity="center"
                    android:src="@drawable/preface_logo_transparent"/>

                <TextView
                    android:id="@+id/aba_about_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:textSize="@dimen/text"
                    android:textColor="@android:color/black"
                    android:text="@string/about_app" />

            </LinearLayout>

            <!-- Second Layer -->
            <TextView
                android:id="@+id/aba_school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin"
                android:textSize="@dimen/text_h1"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:text="@string/school_name" />

            <android.support.v4.view.ViewPager
                android:id="@+id/aa_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/map_height_default"
                android:padding="@dimen/margin"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/aba_about_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/text"
                android:textColor="@android:color/black"
                android:text="@string/about_school" />


        </LinearLayout>

        <!-- Third layer with social media -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin"
            android:background="@color/colorPrimary100">

            <!-- Title -->
            <TextView
                android:id="@+id/aa_follow_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin"
                android:textSize="@dimen/text_h2"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:text="@string/follow_us"/>

            <!-- Social media icons -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/aa_follow_text"
                android:layout_centerHorizontal="true">

                <!-- Twitter -->
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/aa_twitter"
                    android:layout_width="@dimen/ic_diameter"
                    android:layout_height="@dimen/ic_diameter"
                    android:layout_margin="@dimen/margin"
                    app:srcCompat="@drawable/ic_twitter"
                    android:onClick="visitSocialMedia"/>

                <!-- Facebook -->
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/aa_facebook"
                    android:layout_width="@dimen/ic_diameter"
                    android:layout_height="@dimen/ic_diameter"
                    android:layout_margin="@dimen/margin"
                    app:srcCompat="@drawable/facebook_logo"
                    android:onClick="visitSocialMedia"
                    android:layout_toRightOf="@id/aa_twitter"/>

                <!-- Google Plus -->

                <!--Instagram -->

            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>
